# claude-for-revenue-intelligence

./: .gitattributes  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  QUICKSTART.md  README.md  pyproject.toml
.github/workflows/: validate.yml
agents/: README.md  runtime.py
agents/anti_qualification_scorer/: README.md  agent.md  aq_scorer.py
agents/signature_authority_miner/: README.md  agent.md  sec_edgar_fetcher.py  signatory_extractor.py
agents/trigger_event_monitor/: README.md  agent.md  earnings_parser.py  (+1 more)
connectors/: README.md  base.py  mock.py
cookbooks/: README.md  growth_command_center.md  intent_activation_and_competitive_response.md  morning_dossier.md  revenue_command_center.md
core/: __init__.py  model_arbitration.py
demo/: README.md  morning_dossier_demo.py  synthetic_data.py
docs/: WHY.md  anti_hallucination.md  explorations.md  growth_intelligence_design_notes.md  intent_activation_design_notes.md  revenue_intelligence_design_notes.md
evals/: README.md  anti_qualification_cohort.py  growth_eval_cases.jsonl  intent_activation_eval_cases.jsonl  revenue_play_eval_cases.jsonl  run_evals.py
plugins/: README.md
schema/: README.md  conversation_evidence.md  funnel_telemetry.md  outcome_telemetry.md  persona_graph.md  signature_authority.md  trigger_events.md
skills/: README.md  loader.py
tests/: test_enterprise_revenue_plays.py  test_forkability_tools.py  test_growth_plays.py  test_intent_activation.py  test_revenue_intelligence.py  test_skill_loader.py
tools/: __init__.py  cold_start.py  inspect_skill.py  new_skill.py
(+63 files in other folders)
