# SPDX-License-Identifier: Apache-2.0

[project]
name = "claude-for-revenue-intelligence"
version = "0.1.0"
description = "Forkable agent harness and skills for schema-driven revenue intelligence workflows."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "Droptops" }
]
dependencies = []

[project.optional-dependencies]
# Required only for Claude-backed agents (e.g. signatory_extractor.extract_signatories_claude).
# Tests, evals, and regex-based extractors run without this installed.
llm = ["anthropic>=0.40.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["core"]
